[package]
name = "rusty_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
mt_logger = "3.0.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
url = "2.3.1"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
